--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Martel:wght@400;800&family=Roboto:wght@300;400;500&display=swap");
 /* Global styles */
 .window-app {
-  font-family: "Roboto", sans-serif;
+    font-family: "CaslonAntique";
+    src: url('../fonts/CaslonAntique.ttf');
 }
 
 .rollable:hover, .rollable:focus {
@@ -15,9 +16,11 @@
   display: grid;
   grid-column: span 2 / span 2;
   grid-template-columns: repeat(2, minmax(0, 1fr));
-  gap: 10px;
+  grid-gap: 0px;
   margin: 10px 0;
   padding: 0;
+    place-items: center;
+    
 }
 
 .grid-3col {
@@ -121,8 +124,8 @@
 
 .fortyk .sheet-header {
   -webkit-box-flex: 0;
-  -ms-flex: 0 0 210px;
-  flex: 0 0 210px;
+  -ms-flex: 0 0 350px;
+  flex: 0 0 350px;
   overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -151,6 +154,27 @@
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
+}
+.fortyk .sheet-header .header-fields .characteristics  span.characteristicsSpan{
+    font-weight: bold;
+   
+    
+}
+
+.fortyk .sheet-header .header-fields .char{
+    width: 100%;
+}
+.charCross{
+    width: 100%;
+    height: 100%;
+    border: 1px solid #999;
+    justify-content: center;
+    align-content: center;
+}
+
+.char-total{
+    width:100%;
+    height:100%;
 }
 
 .fortyk .sheet-header h1.charname {
@@ -246,3 +270,4 @@
   flex: 0 0 86px;
   text-align: right;
 }
+
