--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -110,7 +110,7 @@
                 
             </div>
             <div class="eliteAdvances">
-            <div class="creationRow flexcol">
+            <div class="eliteRow flexcol">
                     <span class="descrSpan">Elite Advances:</span>
                     <input name="data.eliteAdvances" type="text" value="{{data.eliteAdvances}}" placeholder="???"/>
                 </div>
