--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -132,8 +132,8 @@
 
 .fortyk .sheet-header {
   -webkit-box-flex: 0;
-  -ms-flex: 1 0 0px;
-  flex: 1 0 0px;
+  -ms-flex: 0 0 0px;
+  flex: 0 0 0px;
   overflow: visible;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -157,13 +157,19 @@
   height: 100px;
   margin-right: 10px;
 }
-.fortyk .sheet-header .header-fields .descr{
+.fortyk .sheet-main .header-fields {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+    flex-direction: column;
+}
+.fortyk .sheet-main .header-fields .descr{
     flex:0;   
     place-items: center stretch;
     margin-top: 0px;
     margin-bottom:5px;
 }
-.fortyk .sheet-header .header-fields .descr .descrRow{
+.fortyk .sheet-main .header-fields .descr .descrRow{
     padding-left: 10px;
     margin-bottom:2px;
     border: 1px solid #999;
@@ -171,36 +177,30 @@
     text-transform: uppercase;
     
 }
-.fortyk .sheet-header .header-fields .creationOps{
+.fortyk .sheet-main .header-fields .creationOps{
     border:1px solid #999;
     font-weight:bold;
     text-transform: uppercase;
     margin-top:0px;
     margin-bottom:2px;
 }
-.fortyk .sheet-header .header-fields .creationOps .creationRow{
+.fortyk .sheet-main .header-fields .creationOps .creationRow{
     padding-left: 10px;
 }
-.fortyk .sheet-header .header-fields .eliteAdvances{
+.fortyk .sheet-main .header-fields .eliteAdvances{
     border:1px solid #999;
     font-weight:bold;
     text-transform: uppercase;
-}
-.fortyk .sheet-header .header-fields .eliteAdvances .eliteRow{
-      padding-left: 10px;
+    padding-left: 10px;
 }
 
 
-.fortyk .sheet-header .header-fields {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-    flex-direction: column;
-}
-.fortyk .sheet-header .header-fields .characteristics{
+
+
+.fortyk .sheet-main .header-fields .characteristics{
     margin-top:19px;
 }
-.fortyk .sheet-header .header-fields .characteristics  span.characteristicsSpan{
+.fortyk .sheet-main .header-fields .characteristics  span.characteristicsSpan{
     font-weight: bold;
    
     
@@ -210,7 +210,7 @@
     
 }
 
-.fortyk .sheet-header .header-fields .char{
+.fortyk .sheet-main .header-fields .char{
     width: 100%;
 }
 .charCross{
@@ -227,25 +227,11 @@
     height:100%;
 }
 
-.fortyk .sheet-header h1.charname {
-  height: 50px;
-  padding: 0px;
-  margin: 5px 0;
-  border-bottom: 0;
-}
-
-.fortyk .sheet-header h1.charname input {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
-
 .fortyk .sheet-tabs {
   -webkit-box-flex: 1;
-  -ms-flex: 0 0 30px;
-  flex: 0 0 30px;
-    height: 30px;
-    
+ 
+    height: 100px;
+    font-weight:bold;
     
 }
 
@@ -283,10 +269,16 @@
 
 .fortyk .tabs .item {
   line-height: 12px;
-  font-weight: bold;
-     font-size: 10px;
+ height:100%;
+    width:100%;
+     border: 1px solid #999;
     height:30px;
    
+}
+.fortyk .tabs .item.active {
+  text-decoration: underline;
+  text-shadow: none;
+    border: 3px solid #999;
 }
 .fortyk .skills{
    
@@ -313,18 +305,22 @@
     padding:3px;
    
 }
-.fortyk .skill .skillItem{
+.fortyk .skills .skillItem{
      flex:1;
     grid-column:initial;
     width:100%;
     height:100%;
 
 }
+.fortyk .skills .skillButton{
+     
+  
+    width:100%;
+    height:100%;
 
-.fortyk .tabs .item.active {
-  text-decoration: underline;
-  text-shadow: none;
 }
+
+
 
 .fortyk .items-list {
   list-style: none;
